--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="text" value="" name="search" placeholder="Find Movie">
           </div>
           <div class="submit-field">
-            <input type="button" value="Search" class="btn">
+            <input type="submit" value="Search" class="btn">
           </div>
         </form>
       </div>
