--- a/index.html
+++ b/index.html
@@ -24,11 +24,13 @@
 
         <form action="#FIXME" name="form" class="form" method="get">
           <div class="input-field">
-            <input type="text" value="" name="search" placeholder="Find Movie">
+            <input type="text" id="search-field" value="" name="search" placeholder="Find Movie">
+            <span id="error-para"></span>
           </div>
           <div class="submit-field">
             <input type="submit" value="Search" class="btn">
           </div>
+
         </form>
       </div>
     </section>
