html stacture completed

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <div class="wrapper">
         <h1 class="heading">Movie name</h1>
 
-        <form action="#FIXME" name="form" class="form" method="get">
+        <form action="#FIXME" name="form" class="form" method="post">
           <div class="input-field">
-            <input type="text" id="search-field" value="" name="search" placeholder="Find Movie">
+            <input type="text" id="search-field" class="input" name="search" placeholder="Find Movie">
             <span id="error-para"></span>
           </div>
           <div class="submit-field">
@@ -32,6 +32,9 @@
           </div>
 
         </form>
+        <div class="movie-wrapper">
+          <h2 class="movie-title">your movie list</h2>
+        </div>
       </div>
     </section>
   </main>
